src/Domain/Compiler/Instruction/Assembly/Aarch/Tests/OperatorKind/__Baselines__/OperatorKind_RemainderUnsigned_64-MachO-Aarch64.error
error: Integral expression '3;
var y: u64 = 3;
return x % y;}}§§§§нннннннн' does not fit into integral type 'u64'.
--> main.hs:7:22
  | 
7 |         var x: u64 = 3;
  |                      ^
error: Integral expression '3;
return x % y;}}§§§§нннннннн' does not fit into integral type 'u64'.
--> main.hs:8:14
  | 
8 | var y: u64 = 3;
  |              ^
